--- a/trunk/test-src/org/hsqldb/resources/test-dbmd-convert.properties
+++ b/trunk/test-src/org/hsqldb/resources/test-dbmd-convert.properties
@@ -1,6 +1,6 @@
 # to array
 hsqldb.test.suite.dbmd.supports.convert.to.array.from.array=true
-# CHECKME: Is this really supposed top be *false* ????
+# CHECKME: Is this really supposed to be *false* ????
 hsqldb.test.suite.dbmd.supports.convert.to.array.from.null=true
 # to bigint
 hsqldb.test.suite.dbmd.supports.convert.to.bigint.from.bigint=true
