--- a/sample/sqltool.rc
+++ b/sample/sqltool.rc
@@ -54,16 +54,21 @@ password
 # Template for a urlid for an Oracle database.
 # You will need to put the oracle.jdbc.OracleDriver class into your 
 # classpath.
-# In the great majority of cases, you want to use the file classes12.zip
-# (which you can get from the directory $ORACLE_HOME/jdbc/lib of any
-# Oracle installation compatible with your server).
+# In the great majority of cases, you want to use jhe desired version of a
+# file odbc*.jar (previously JDBC distributed as classes12.zip),
+# which you can get from the directory $ORACLE_HOME/jdbc/lib of any
+# Oracle installation compatible with your server.
 # Since you need to add to the classpath, you can't invoke SqlTool with
 # the jar switch, like "java -jar .../sqltool.jar...".
-# Put both the SqlTool jar and classes12.zip in your classpath (and export!)
+# Put both the SqlTool jar and odbc*.jar in your classpath (and export!)
 # and run something like "java org.hsqldb.util.SqlTool...".
+# You could use the thick driver instead of the thin, but I know of no reason
+# why any Java app should.
 
 #urlid cardiff2
-#url jdbc:oracle:thin:@aegir.admc.com:1522:TRAFFIC_SID
+#url jdbc:oracle:thin:@aegir.admc.com:1521:TRAFFIC_SID
+# Thin URLs must specify both port and SID, there are no defaults.
+# Oracle listens to 1521 by default, so that's what you will usually specify.
 #username blaine
 #password secretpassword
 #driver oracle.jdbc.OracleDriver
@@ -104,8 +109,16 @@ password
 
 # Template for a Microsoft SQL Server database using Microsoft's Driver
 # (I find that the JTDS driver is much more responsive than Microsoft's).
-# OLDER JDBC Driver:
+# Port defaults to 1433.
+# MSDN implies instances are port-specific, so can specify port or instname.
 #urlid msprojsvr
+# url/driver for Current 2011 JDBC Driver for Microsoft SQL Server:
+# Requires just the new sqljdbc4.jar.  (Microsoft just loves back-slashes)
+#url jdbc:sqlserver://hostname\instname;databaseName=dbname
+# OR
+#url jdbc:sqlserver://hostname;instanceName=instname;databaseName=dbname
+#driver com.microsoft.jdbc.sqlserver.SQLServerDriver
+# url/deriver for OLDER JDBC Driver:
 #url jdbc:microsoft:sqlserver://hostname;DatabaseName=DbName;SelectMethod=Cursor
 # The SelectMethod setting is required to do more than one thing on a JDBC
 # session (I guess Microsoft thought nobody would really use Java for 
@@ -115,17 +128,18 @@ password
 #driver com.microsoft.jdbc.sqlserver.SQLServerDriver
 #username myuser
 #password hiddenpwd
-# Current 2011 JDBC Driver for Microsoft SQL Server:
-# Requires just the new sqljdbc4.jar.  (Microsoft just loves back-slashes)
-#url jdbc:sqlserver://hostname\instanceName;DatabaseName=dbname
-#driver com.microsoft.jdbc.sqlserver.SQLServerDriver
 
 # Template for Microsoft SQL Server database using the JTDS Driver
 # http://jtds.sourceforge.net  Jar file has name like "jtds-1.2.5.jar".
+# Port defaults to 1433.
+# MSDN implies instances are port-specific, so can specify port or instname.
 #urlid nlyte
 #username myuser
 #password hiddenpwd
 #url jdbc:jtds:sqlserver://myhost/nlyte;instance=MSSQLSERVER
+# Where database is 'nlyte' and instance is 'MSSQLSERVER'.
+# N.b. this is diff. from MS tools and JDBC driver where (depending on which
+# document you read), instance or database X are specified like  HOSTNAME\X.
 #driver net.sourceforge.jtds.jdbc.Driver
 
 # Template for a Sybase database
