core code updates
git-svn-id: https://svn.code.sf.net/p/hsqldb/svn/base/trunk@5198 7c7dc5f5-a22d-0410-a3af-b41755a11667

--- a/src/org/hsqldb/resources/info-column-remarks.properties
+++ b/src/org/hsqldb/resources/info-column-remarks.properties
@@ -248,6 +248,7 @@ SYSTEM_TYPEINFO_CASE_SENSITIVE=TRUE if the type is case-sensitive in collations 
 SYSTEM_TYPEINFO_SEARCHABLE=use of WHERE?: { None | Char (Only WHERE .. LIKE) | Basic (Except WHERE .. LIKE) | Searchable (All forms of WHERE...) }
 SYSTEM_TYPEINFO_UNSIGNED_ATTRIBUTE=TRUE if the data type is unsigned; NULL the attribute is not applicable to the data type or the data type is not numeric.
 SYSTEM_TYPEINFO_FIXED_PREC_SCALE=TRUE if the data type has predefined fixed precision and scale , like a money data type.  NULL for non-numeric types.
+SYSTEM_TYPEINFO_INTERVAL_PRECISION=if the data type is an interval data type, then this column contains the value of the interval leading precision.  Otherwise, this column is NULL.
 SYSTEM_TYPEINFO_AUTO_INCREMENT=NULL if the attribute is not applicable to the data type or the data type is not numeric.  If TRUE, this indicates that when an insert is made, a unique value is inserted into the column at insert time. The increment is not defined. An application should not assume that auto-increment values start at any particular point or increment by any particular value.
 SYSTEM_TYPEINFO_LOCAL_TYPE_NAME=Localized version of the name of the data type; NULL if a localized name is not supported.  This name is intended for display only, such as in dialog boxes
 SYSTEM_TYPEINFO_MINIMUM_SCALE=minimum scale supported
@@ -265,9 +266,11 @@ SYSTEM_UDTS_DATA_TYPE=type value defined in DITypes, from one of { "JAVA_OBJECT"
 SYSTEM_UDTS_BASE_TYPE=type code of the source type of a DISTINCT type or the type that implements the user-generated reference type of the SELF_REFERENCING_COLUMN of a structured type as defined in DITypes (null if DATA_TYPE is not DISTINCT or not STRUCT with REFERENCE_GENERATION = USER_DEFINED)
 SYSTEM_UDTS_REMARKS=explanatory comment on the user defined type
 # SYSTEM_USERS
-SYSTEM_USERS_USER=user name
+SYSTEM_USERS_USER_NAME=user name
 SYSTEM_USERS_ADMIN=has the administrative privilege?
 SYSTEM_USERS_INITIAL_SCHEMA=initial schema for user
+SYSTEM_USERS_AUTHENTICATION=method of identification for the user
+SYSTEM_USERS_PASSWORD_DIGEST=password digest
 # SYSTEM_VERSIONCOLUMNS
 SYSTEM_VERSIONCOLUMNS_TABLE_CAT=table catalog
 SYSTEM_VERSIONCOLUMNS_TABLE_SCHEM=table schema
@@ -391,4 +394,3 @@ SYSTEM_SCHEMATA_DEFAULT_CHARACTER_SET_CATALOG=the catalog name of the default ch
 SYSTEM_SCHEMATA_DEFAULT_CHARACTER_SET_SCHEMA=the unqualified schema name of the default character set for columns and domains in the schema.
 SYSTEM_SCHEMATA_DEFAULT_CHARACTER_SET_NAME=the qualified identifier of the default character set for columns and domains in the schemata.
 SYSTEM_SCHEMATA_SQL_PATH=the character representation of the schema's <schema path specification>, or null if it cannot be represented without truncation
-
