--- a/src/org/hsqldb/resources/sql-state-messages.properties
+++ b/src/org/hsqldb/resources/sql-state-messages.properties
@@ -99,7 +99,7 @@
 0462=S1000 Unsupported suffix in file name '$$'.  (Supported suffixes:  $$)
 0463=S1000 Mismatch between specified compression mode '$$' and file name '$$'
 0464=S1000 Database is non-file type
-0465=S1000 Database does not exist
+0465=S1000 Database does not exists
 0466=S1000 Data File input/output error
 0467=S1000 IO error
 0468=S1000 Data File size limit is reached
