--- a/trunk/test-src/org/hsqldb/resources/test.properties
+++ b/trunk/test-src/org/hsqldb/resources/test.properties
@@ -238,7 +238,7 @@ hsqldb.test.suite.dbmd.supports.correlated.subqueries=true
 hsqldb.test.suite.dbmd.supports.data.definition.and.data.manipulation.transactions=false
 hsqldb.test.suite.dbmd.supports.data.manipulation.transactions.only=true
 #
-hsqldb.test.suite.dbmd.supports.different.table.correlation.names=false
+hsqldb.test.suite.dbmd.supports.different.table.correlation.names=true
 #
 hsqldb.test.suite.dbmd.supports.expressions.in.order.by=true
 # disabled for now
