--- a/trunk/src/org/hsqldb/resources/sql-state-messages.properties
+++ b/trunk/src/org/hsqldb/resources/sql-state-messages.properties
@@ -464,6 +464,7 @@
 
 # HSQLDB internal transactions
 4871=40501 transaction rollback: row change by multiple transactions
+4872=40502 statement execution aborted: timeout reached
 
 # syntax error or access rule violation
 5000=42000 syntax error or access rule violation
