core code updates
git-svn-id: https://svn.code.sf.net/p/hsqldb/svn/base/trunk@5213 7c7dc5f5-a22d-0410-a3af-b41755a11667

--- a/src/org/hsqldb/resources/sql-state-messages.properties
+++ b/src/org/hsqldb/resources/sql-state-messages.properties
@@ -464,6 +464,7 @@
 
 # HSQLDB internal transactions
 4871=40501 transaction rollback: row change by multiple transactions
+4872=40502 statement execution aborted: timeout reached
 
 # syntax error or access rule violation
 5000=42000 syntax error or access rule violation
