core code updates
git-svn-id: https://svn.code.sf.net/p/hsqldb/svn/base/trunk@5267 7c7dc5f5-a22d-0410-a3af-b41755a11667

--- a/src/org/hsqldb/resources/sql-state-messages.properties
+++ b/src/org/hsqldb/resources/sql-state-messages.properties
@@ -562,7 +562,7 @@
 5590=42590 unexpected end of statement
 
 # other
-5591=42591 cannot drop sole column of table
+5591=42591 needs column or cannot drop sole column of table
 5592=42592 precision or scale out of range
 5593=42593 column count mismatch in column name list
 5594=42594 column number mismatch detected in rows of UNION, INTERSECT, EXCEPT, or VALUES operation
