--- a/trunk/src/org/hsqldb/resources/sql-state-messages.properties
+++ b/trunk/src/org/hsqldb/resources/sql-state-messages.properties
@@ -562,7 +562,7 @@
 5590=42590 unexpected end of statement
 
 # other
-5591=42591 cannot drop sole column of table
+5591=42591 needs column or cannot drop sole column of table
 5592=42592 precision or scale out of range
 5593=42593 column count mismatch in column name list
 5594=42594 column number mismatch detected in rows of UNION, INTERSECT, EXCEPT, or VALUES operation
