--- a/trunk/test-src/org/hsqldb/resources/test.properties
+++ b/trunk/test-src/org/hsqldb/resources/test.properties
@@ -113,14 +113,14 @@ hsqldb.test.suite.dbmd.catalog.term=CATALOG
 hsqldb.test.suite.dbmd.database.major.version=2
 hsqldb.test.suite.dbmd.database.minor.version=3
 hsqldb.test.suite.dbmd.database.product.name=HSQL Database Engine
-hsqldb.test.suite.dbmd.database.product.version=2.3.0
+hsqldb.test.suite.dbmd.database.product.version=2.3.2
 #
 hsqldb.test.suite.dbmd.default.transaction.isolation=2
 #
 hsqldb.test.suite.dbmd.driver.major.version=2
 hsqldb.test.suite.dbmd.driver.minor.version=3
 hsqldb.test.suite.dbmd.driver.name=HSQL Database Engine Driver
-hsqldb.test.suite.dbmd.driver.version=2.3.0
+hsqldb.test.suite.dbmd.driver.version=2.3.2
 #
 hsqldb.test.suite.dbmd.extra.name.characters=
 hsqldb.test.suite.dbmd.identifier.quote.string="
@@ -238,7 +238,7 @@ hsqldb.test.suite.dbmd.supports.correlated.subqueries=true
 hsqldb.test.suite.dbmd.supports.data.definition.and.data.manipulation.transactions=false
 hsqldb.test.suite.dbmd.supports.data.manipulation.transactions.only=true
 #
-hsqldb.test.suite.dbmd.supports.different.table.correlation.names=true
+hsqldb.test.suite.dbmd.supports.different.table.correlation.names=false
 #
 hsqldb.test.suite.dbmd.supports.expressions.in.order.by=true
 # disabled for now
@@ -655,8 +655,8 @@ hsqldb.test.suite.rsmd.case.sensitive.18=false
 hsqldb.test.suite.rsmd.case.sensitive.19=false
 hsqldb.test.suite.rsmd.case.sensitive.20=true
 hsqldb.test.suite.rsmd.case.sensitive.21=false
-hsqldb.test.suite.rsmd.case.sensitive.22=false
-hsqldb.test.suite.rsmd.case.sensitive.23=true
+hsqldb.test.suite.rsmd.case.sensitive.22=true
+hsqldb.test.suite.rsmd.case.sensitive.23=false
 #
 hsqldb.test.suite.rsmd.currency.1=false
 hsqldb.test.suite.rsmd.currency.2=false
