--- a/trunk/src/org/hsqldb/resources/sql-state-messages.properties
+++ b/trunk/src/org/hsqldb/resources/sql-state-messages.properties
@@ -105,6 +105,7 @@
 0468=S1000 Data File size limit is reached
 0469=S1000 Data File is in use
 0470=S1000 Backup error
+0471=S1000 Data cache size limit is reached
 
 # text tables
 0481=S1000 The table's data source has not been defined
