--- a/src/org/hsqldb/resources/sql-state-messages.properties
+++ b/src/org/hsqldb/resources/sql-state-messages.properties
@@ -6,7 +6,7 @@
 #
 # @author Campbell Boucher Burnet (boucherb@users dot sourceforge.net)
 # @author Fred Toussi (fredt@users dot sourceforge.net)
-# @version 2.0.1
+# @version 2.3.3
 # @since 1.9.0
 #
 # do not translate this section
@@ -584,6 +584,7 @@
 5608=42608 wrong or missing data impact clause in declaration
 5609=42609 routine signature not found for
 5610=42610 wrong signature for aggregate function declaration
+5611=42611 type incompatible with declared return type
 
 # with check option violation
 5700=44000 with check option violation
