--- a/trunk/src/org/hsqldb/resources/jdklogging-default.properties
+++ b/trunk/src/org/hsqldb/resources/jdklogging-default.properties
@@ -4,7 +4,7 @@
 # extended characters.
 
 # See http://java.sun.com/javase/6/docs/technotes/guides/logging/overview.html
-# for an overview of the JDK logging system, aka the Java Logging API or
+# for an overview of the JDK logging system, aka the Java Logging API, JUL, or
 # java.util.logging.
 # If you want more, and easier, control, particularly over the format of
 # output records, use Log4J instead.
