--- a/trunk/src/org/hsqldb/resources/sql-state-messages.properties
+++ b/trunk/src/org/hsqldb/resources/sql-state-messages.properties
@@ -585,6 +585,7 @@
 5609=42609 routine signature not found for
 5610=42610 wrong signature for aggregate function declaration
 5611=42611 type incompatible with declared return type
+5612=42612 SQL exception already used
 
 # with check option violation
 5700=44000 with check option violation
