--- a/src/org/hsqldb/resources/sql-state-messages.properties
+++ b/src/org/hsqldb/resources/sql-state-messages.properties
@@ -4,7 +4,7 @@
 #
 #
 #
-# @author Campbell Boucher Burnet (boucherb@users dot sourceforge.net)
+# @author Campbell Burnet (boucherb@users dot sourceforge.net)
 # @author Fred Toussi (fredt@users dot sourceforge.net)
 # @version 2.3.3
 # @since 1.9.0
