--- a/trunk/src/org/hsqldb/resources/sql-state-messages.properties
+++ b/trunk/src/org/hsqldb/resources/sql-state-messages.properties
@@ -106,6 +106,7 @@
 0469=S1000 Data File is in use
 0470=S1000 Backup error
 0471=S1000 Data cache size limit is reached
+0472=S1000 problem with log file
 
 # text tables
 0481=S1000 The table's data source has not been defined
