--- a/trunk/src/org/hsqldb/resources/sql-state-messages.properties
+++ b/trunk/src/org/hsqldb/resources/sql-state-messages.properties
@@ -328,6 +328,7 @@
 3471=22501 value cannot be converted to target type
 3472=22511 invalid function argument
 3473=22521 object serialization failure
+3474=22522 query execution reached limit of recursion
 
 # 04-PSM
 3488=2202A data exception: null value in field reference
