--- a/src/org/hsqldb/resources/sql-state-messages.properties
+++ b/src/org/hsqldb/resources/sql-state-messages.properties
@@ -520,8 +520,8 @@
 5545=42545 INSERT, UPDATE, DELETE or TRUNCATE not permitted for table or view
 5546=42546 number of target columns does not match that of query expression
 5547=42547 WHEN MATCHED already used in MERGE
-5548=42548 WHEN NOT MATCHED altready used in MERGE
-5549=42549 LIMIT, OFFSET or FETCH altready used
+5548=42548 WHEN NOT MATCHED already used in MERGE
+5549=42549 LIMIT, OFFSET or FETCH already used
 
 #
 5551=42551 too many identifier parts
