--- a/trunk/src/org/hsqldb/resources/webserver-content-types.properties
+++ b/trunk/src/org/hsqldb/resources/webserver-content-types.properties
@@ -70,7 +70,7 @@ cpp=text/x-c
 cpt=application/mac-compactpro
 #cpt=application/x-compactpro,application/x-cpt
 crl=application/pkcs-crl
-crl=application/pkix-crl
+#crl=application/pkix-crl
 crt=application/pkix-cert
 #crt=application/x-x509-ca-cert,application/x-x509-user-cert
 csh=application/x-csh
@@ -250,7 +250,7 @@ midi=application/x-midi
 mif=application/x-frame
 #mif=application/x-mif
 mime=message/rfc822
-mime=www/mime
+#mime=www/mime
 mjf=audio/x-vndAudioExplosionMjuiceMediaFile
 mjpg=video/x-motion-jpeg
 mm=application/base64
@@ -329,7 +329,7 @@ pl=text/plain
 #pl=text/x-scriptperl
 plx=application/x-PiXCLscript
 pm=image/x-xpixmap
-pm=text/x-scriptperl-module
+#pm=text/x-scriptperl-module
 pm4=application/x-pagemaker
 pm5=application/x-pagemaker
 png=image/png
@@ -365,7 +365,7 @@ ra=audio/x-pn-realaudio
 #ra=audio/x-pn-realaudio-plugin,audio/x-realaudio
 ram=audio/x-pn-realaudio
 ras=application/x-cmu-raster
-ras=image/cmu-raster
+#ras=image/cmu-raster
 #ras=image/x-cmu-raster
 rast=image/cmu-raster
 rexx=text/x-scriptrexx
@@ -376,15 +376,15 @@ rm=application/vndrn-realmedia
 rmi=audio/mid
 rmm=audio/x-pn-realaudio
 rmp=audio/x-pn-realaudio
-rmp=audio/x-pn-realaudio-plugin
+#rmp=audio/x-pn-realaudio-plugin
 rng=application/ringing-tones
-rng=application/vndnokiaringing-tone
+#rng=application/vndnokiaringing-tone
 rnx=application/vndrn-realplayer
 roff=application/x-troff
 rp=image/vndrn-realpix
 rpm=audio/x-pn-realaudio-plugin
 rt=text/richtext
-rt=text/vndrn-realtext
+#rt=text/vndrn-realtext
 rtf=application/rtf
 #rtf=application/x-rtf,text/richtext
 rtx=application/rtf
@@ -464,7 +464,7 @@ tif=image/tiff
 tr=application/x-troff
 tsi=audio/tsp-audio
 tsp=application/dsptype
-tsp=audio/tsplayer
+#tsp=audio/tsplayer
 tsv=text/tab-separated-values
 turbot=image/florian
 txt=text/plain
@@ -519,7 +519,7 @@ wmlsc=application/vndwapwmlscriptc
 word=application/msword
 wp=application/wordperfect
 wp5=application/wordperfect
-wp5=application/wordperfect60
+#wp5=application/wordperfect60
 wp6=application/wordperfect
 wpd=application/wordperfect
 #wpd=application/x-wpwin
