text table fix 2
git-svn-id: https://svn.code.sf.net/p/hsqldb/svn/base/trunk@5592 7c7dc5f5-a22d-0410-a3af-b41755a11667

--- a/src/org/hsqldb/resources/sql-state-messages.properties
+++ b/src/org/hsqldb/resources/sql-state-messages.properties
@@ -59,7 +59,7 @@
 0301=S0501 no file name specified for source
 0302=S0502 no value specified for field
 0303=S0503 zero-length separator
-0304=S0504
+0304=S0504 length of text quote character must be 1
 0320=S0521 operation is not allowed on text table with data
 0321=S0522 invalid statemnet - text table required
 0331=S0531 encode / decode error
