text table UTF16
git-svn-id: https://svn.code.sf.net/p/hsqldb/svn/base/trunk@5600 7c7dc5f5-a22d-0410-a3af-b41755a11667

--- a/src/org/hsqldb/resources/sql-state-messages.properties
+++ b/src/org/hsqldb/resources/sql-state-messages.properties
@@ -25,7 +25,7 @@
 0028=properties name is null or empty
 
 # message parts
-0041=Error in text source field
+0041=S1000 Error in text source field
 0042=openning file: $$ error: $$
 0043=closing file: $$ error: $$
 0044=purging file: $$ error: $$
@@ -63,6 +63,7 @@
 0320=S0521 operation is not allowed on text table with data
 0321=S0522 invalid statemnet - text table required
 0331=S0531 encode / decode error
+0332=S0532 UTF-16 encoding string required
 
 # HSQLDB authentication
 0391=S1000 password complexity
