--- a/trunk/src/org/hsqldb/resources/sql-state-messages.properties
+++ b/trunk/src/org/hsqldb/resources/sql-state-messages.properties
@@ -62,7 +62,7 @@
 0304=S0504 length of text quote character must be 1
 0320=S0521 operation is not allowed on text table with data
 0321=S0522 invalid statemnet - text table required
-0331=S0531 encode / decode error
+0331=S0531 text file encode / decode error
 0332=S0532 UTF-16 encoding string required
 
 # HSQLDB authentication
