--- a/trunk/src/org/hsqldb/resources/sql-state-messages.properties
+++ b/trunk/src/org/hsqldb/resources/sql-state-messages.properties
@@ -324,6 +324,7 @@
 3459=22026 data exception: string data, length mismatch
 3460=22027 data exception: trim error
 3461=22029 data exception: noncharacter in UCS string
+3462=22020 data exception: invalid period value
 
 # HSQLDB data exception
 3471=22501 value cannot be converted to target type
