--- a/test-src/org/hsqldb/resources/test.properties
+++ b/test-src/org/hsqldb/resources/test.properties
@@ -109,26 +109,28 @@ hsqldb.test.suite.dbmd.does.max.row.size.include.blobs=true
 #
 hsqldb.test.suite.dbmd.catalog.separator=.
 hsqldb.test.suite.dbmd.catalog.term=CATALOG
-#
+#Use this solely as the minimum version for Java 8 compatibility
 hsqldb.test.suite.dbmd.database.major.version=2
-hsqldb.test.suite.dbmd.database.minor.version=3
+hsqldb.test.suite.dbmd.database.minor.version=4
 hsqldb.test.suite.dbmd.database.product.name=HSQL Database Engine
-hsqldb.test.suite.dbmd.database.product.version=2.3.2
+hsqldb.test.suite.dbmd.database.product.version=2.4.0
 #
 hsqldb.test.suite.dbmd.default.transaction.isolation=2
-#
+#Use this solely as the minimum version for Java 8 compatibility
 hsqldb.test.suite.dbmd.driver.major.version=2
-hsqldb.test.suite.dbmd.driver.minor.version=3
+hsqldb.test.suite.dbmd.driver.minor.version=4
 hsqldb.test.suite.dbmd.driver.name=HSQL Database Engine Driver
-hsqldb.test.suite.dbmd.driver.version=2.3.2
+hsqldb.test.suite.dbmd.driver.version=2.4.0
 #
 hsqldb.test.suite.dbmd.extra.name.characters=
 hsqldb.test.suite.dbmd.identifier.quote.string="
-#This is for Java 6 & 7+.
+#This value is returned for jars compiled under Java 6 and 8
 #The test suite currently requires Java 6+ (JDBC 4+)
 hsqldb.test.suite.dbmd.jdbc.major.version=4
-#This is for Java 6.  Set this to 1 when testing under Java 7+
-hsqldb.test.suite.dbmd.jdbc.minor.version=0
+#This value is for jars compiled under Java 8.
+#Use this only for testing version 2.4.0 and greater
+#Do not use this when testing under Java 6
+hsqldb.test.suite.dbmd.jdbc.minor.version=2
 #
 hsqldb.test.suite.dbmd.max.binary.literal.length=0
 hsqldb.test.suite.dbmd.max.catalog.name.length=128
@@ -513,6 +515,30 @@ hsqldb.test.suite.rsmd.column.type.name.20=VARCHAR
 hsqldb.test.suite.rsmd.column.type.name.21=BLOB
 hsqldb.test.suite.rsmd.column.type.name.22=CLOB
 hsqldb.test.suite.rsmd.column.type.name.23=INTEGER ARRAY[4]
+#
+hsqldb.test.suite.rsmd.display.size.1=11
+hsqldb.test.suite.rsmd.display.size.2=20
+hsqldb.test.suite.rsmd.display.size.3=255
+hsqldb.test.suite.rsmd.display.size.4=5
+hsqldb.test.suite.rsmd.display.size.5=255
+hsqldb.test.suite.rsmd.display.size.6=10
+hsqldb.test.suite.rsmd.display.size.7=129
+hsqldb.test.suite.rsmd.display.size.8=23
+hsqldb.test.suite.rsmd.display.size.9=23
+hsqldb.test.suite.rsmd.display.size.10=11
+hsqldb.test.suite.rsmd.display.size.11=16777216
+hsqldb.test.suite.rsmd.display.size.12=16777216
+hsqldb.test.suite.rsmd.display.size.13=0
+hsqldb.test.suite.rsmd.display.size.14=23
+hsqldb.test.suite.rsmd.display.size.15=6
+hsqldb.test.suite.rsmd.display.size.16=8
+hsqldb.test.suite.rsmd.display.size.17=26
+hsqldb.test.suite.rsmd.display.size.18=4
+hsqldb.test.suite.rsmd.display.size.19=255
+hsqldb.test.suite.rsmd.display.size.20=255
+hsqldb.test.suite.rsmd.display.size.21=16
+hsqldb.test.suite.rsmd.display.size.22=16
+hsqldb.test.suite.rsmd.display.size.23=55
 #
 hsqldb.test.suite.rsmd.precision.1=32
 hsqldb.test.suite.rsmd.precision.2=64
