--- a/trunk/src/org/hsqldb/resources/sql-state-messages.properties
+++ b/trunk/src/org/hsqldb/resources/sql-state-messages.properties
@@ -6,7 +6,7 @@
 #
 # @author Campbell Burnet (campbell-burnet@users dot sourceforge.net)
 # @author Fred Toussi (fredt@users dot sourceforge.net)
-# @version 2.3.3
+# @version 2.3.5
 # @since 1.9.0
 #
 # do not translate this section
@@ -71,8 +71,8 @@
 # Server
 0401=S1000 Transfer corrupted
 0402=S0504 database disconnected
-0403=S0504 Client driver version greater than '$$' is required.  \
-        HSQLDB server version is '$$'
+0403=S0504 HSQLDB server version is '$$'  \
+           client version '$$' is not compatible.
 0404=S0504 Network client is not a HSQLDB JDBC driver
 0405=S0504 Client using HSQLDB http protocol instead of hsql
 0406=S0504 Incomplete read of handshaking bytes
@@ -89,7 +89,7 @@
 0451=S1000 Database lock acquisition failure
 0452=S1000 file input/output error
 0453=S1000 wrong database file version
-0454=S1000 data file is modified but backup file does not exist
+0454=S1000 .data file is modified but .backup file does not exist
 0455=S1000 The database is in read only mode
 0456=S1000 The table data is read only
 0457=S1000 Access is denied
