--- a/src/org/hsqldb/resources/sql-state-messages.properties
+++ b/src/org/hsqldb/resources/sql-state-messages.properties
@@ -13,6 +13,7 @@
 0001=: $$ required: $$
 0002=; $$ table: $$
 0003=; $$ table: $$ column: $$
+0004=; $$ table: $$ value: $$
 
 # message parts
 0021=\u0020table $$ row count error : $$ read, needed $$
