--- a/src/org/hsqldb/resources/sql-state-messages.properties
+++ b/src/org/hsqldb/resources/sql-state-messages.properties
@@ -6,7 +6,7 @@
 #
 # @author Campbell Burnet (campbell-burnet@users dot sourceforge.net)
 # @author Fred Toussi (fredt@users dot sourceforge.net)
-# @version 2.3.5
+# @version 2.4.2
 # @since 1.9.0
 #
 # do not translate this section
@@ -487,9 +487,12 @@
 5509=42509 type not found or user lacks privilege
 5510=42510 name too long
 
-# genrated columns
+# generated columns
 5512=42512 invalid expression in CHECK or GENERATED clause
 5513=42513 assignment to generated column
+
+# period columns
+5516=42516 invalid period column name or type
 
 # constraint defintition issues
 5520=42520 SET NULL requires nullable column
