dev update - system period
git-svn-id: http://svn.code.sf.net/p/hsqldb/svn/base@5851 7c7dc5f5-a22d-0410-a3af-b41755a11667

--- a/branches/dev-three/src/org/hsqldb/resources/sql-state-messages.properties
+++ b/branches/dev-three/src/org/hsqldb/resources/sql-state-messages.properties
@@ -493,6 +493,7 @@
 
 # period columns
 5516=42516 invalid period column name or type
+5517=42517 operation not allowed - generated or period column
 
 # constraint defintition issues
 5520=42520 SET NULL requires nullable column
