--- a/src/org/hsqldb/resources/sql-state-messages.properties
+++ b/src/org/hsqldb/resources/sql-state-messages.properties
@@ -494,6 +494,7 @@
 # period columns
 5516=42516 invalid period column name or type
 5517=42517 operation not allowed - generated or period column
+5518=42518 operation not allowed - system versioning
 
 # constraint defintition issues
 5520=42520 SET NULL requires nullable column
