--- a/trunk/src/org/hsqldb/cmdline/sqltool.properties
+++ b/trunk/src/org/hsqldb/cmdline/sqltool.properties
@@ -279,3 +279,4 @@ bad.time.format=Malformatted date/time format string.\u000a\
 no.timestamp.format=You can't expand *TIMESTAMP unless *TIMESTAMP_FORMAT has been set
 else.without.if='else' statement not at top level of an if block
 import.col.dup=Multiple input columns for single output database column: %{1}
+desturl.nowrite=Destination URL can't be written to: %{1}
