Non-functional updates in prep for upcoming SQL file by URL enhancement
git-svn-id: http://svn.code.sf.net/p/hsqldb/svn/base/trunk@5861 7c7dc5f5-a22d-0410-a3af-b41755a11667

--- a/src/org/hsqldb/cmdline/sqltool.properties
+++ b/src/org/hsqldb/cmdline/sqltool.properties
@@ -279,3 +279,4 @@ bad.time.format=Malformatted date/time format string.\u000a\
 no.timestamp.format=You can't expand *TIMESTAMP unless *TIMESTAMP_FORMAT has been set
 else.without.if='else' statement not at top level of an if block
 import.col.dup=Multiple input columns for single output database column: %{1}
+desturl.nowrite=Destination URL can't be written to: %{1}
