More general handling of SqlTool JDBC driver specification
git-svn-id: http://svn.code.sf.net/p/hsqldb/svn/base/trunk@5874 7c7dc5f5-a22d-0410-a3af-b41755a11667

--- a/src/org/hsqldb/cmdline/sqltool.properties
+++ b/src/org/hsqldb/cmdline/sqltool.properties
@@ -49,7 +49,7 @@ SqlTool.params.redundant=Redundant command-line switch(es) specified.  \u000a\
 sqltempfile.fail=Failed to write given sql to temp file.\u000aCause: %{1}
 rcdata.inlineurl.missing='url' element is required for inline RC arg.
 rcdata.inline.extravars=Unsupported inline element(s) supplied: %{1}.
-rcdata.inlineusername.missing='user' element is required for inline RC arg.
+rcdata.driver.conflict=JDBC driver over-constrained.
 rcdata.password.visible='password' element must have empty value.  \
             For non-empty password, give no\u000a\
             password element and you will be prompted for the value.
