--- a/trunk/src/org/hsqldb/cmdline/sqltool.properties
+++ b/trunk/src/org/hsqldb/cmdline/sqltool.properties
@@ -49,7 +49,7 @@ SqlTool.params.redundant=Redundant command-line switch(es) specified.  \u000a\
 sqltempfile.fail=Failed to write given sql to temp file.\u000aCause: %{1}
 rcdata.inlineurl.missing='url' element is required for inline RC arg.
 rcdata.inline.extravars=Unsupported inline element(s) supplied: %{1}.
-rcdata.inlineusername.missing='user' element is required for inline RC arg.
+rcdata.driver.conflict=JDBC driver over-constrained.
 rcdata.password.visible='password' element must have empty value.  \
             For non-empty password, give no\u000a\
             password element and you will be prompted for the value.
