core code updates - enhancements
git-svn-id: http://svn.code.sf.net/p/hsqldb/svn/base/trunk@6260 7c7dc5f5-a22d-0410-a3af-b41755a11667

--- a/src/org/hsqldb/resources/sql-state-messages.properties
+++ b/src/org/hsqldb/resources/sql-state-messages.properties
@@ -6,7 +6,7 @@
 #
 # @author Campbell Burnet (campbell-burnet@users dot sourceforge.net)
 # @author Fred Toussi (fredt@users dot sourceforge.net)
-# @version 2.5.0
+# @version 2.5.2
 # @since 1.9.0
 #
 # do not translate this section
@@ -596,6 +596,7 @@
 5610=42610 wrong signature for aggregate function declaration
 5611=42611 type incompatible with declared return type
 5612=42612 SQL exception already used
+5613=42613 wildcard * not allowed in routine, view or trigger definition
 
 # with check option violation
 5700=44000 with check option violation
