--- a/trunk/src/org/hsqldb/resources/sql-state-messages.properties
+++ b/trunk/src/org/hsqldb/resources/sql-state-messages.properties
@@ -6,7 +6,7 @@
 #
 # @author Campbell Burnet (campbell-burnet@users dot sourceforge.net)
 # @author Fred Toussi (fredt@users dot sourceforge.net)
-# @version 2.5.2
+# @version 2.6.0
 # @since 1.9.0
 #
 # do not translate this section
@@ -597,6 +597,7 @@
 5611=42611 type incompatible with declared return type
 5612=42612 SQL exception already used
 5613=42613 wildcard * not allowed in routine, view or trigger definition
+5614=42614 duplicate parameter name
 
 # with check option violation
 5700=44000 with check option violation
